[gd_scene load_steps=2 format=3 uid="uid://cx6hj0nlofrti"]

[ext_resource type="Script" uid="uid://dflwhkoanjwbi" path="res://GachaUI.gd" id="1"]

[node name="GachaUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.3, 0.5, 0.9)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "GACHA"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="CharacterTab" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_name = "Character Banner"
metadata/_tab_index = 0

[node name="InfoLabel" type="Label" parent="TabContainer/CharacterTab"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Pull for Characters!
Common: 60% | Rare: 30% | Legendary: 9.5% | Mythic: 0.5%"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="TabContainer/CharacterTab"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="PullButton" type="Button" parent="TabContainer/CharacterTab/ButtonContainer"]
layout_mode = 2
text = "Pull (1 Pull Currency)"

[node name="Pull10Button" type="Button" parent="TabContainer/CharacterTab/ButtonContainer"]
layout_mode = 2
text = "Pull x10 (10 Pull Currency)"

[node name="PityLabel" type="Label" parent="TabContainer/CharacterTab"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -40.0
offset_right = 75.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Pity: 0/90"
horizontal_alignment = 1

[node name="WeaponTab" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "Weapon Banner"
metadata/_tab_index = 1

[node name="InfoLabel" type="Label" parent="TabContainer/WeaponTab"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Pull for Weapons!
Common: 70% | Rare: 25% | Legendary: 4.5% | Mythic: 0.5%"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="TabContainer/WeaponTab"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="PullButton" type="Button" parent="TabContainer/WeaponTab/ButtonContainer"]
layout_mode = 2
text = "Pull (1 Pull Currency)"

[node name="Pull10Button" type="Button" parent="TabContainer/WeaponTab/ButtonContainer"]
layout_mode = 2
text = "Pull x10 (10 Pull Currency)"

[node name="PityLabel" type="Label" parent="TabContainer/WeaponTab"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -40.0
offset_right = 75.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Pity: 0/80"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"
